--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "the-orangevale-history-project",
+  "name": "the-orangevale-history-museum",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "The museum site for the Orangevale History Project",
   "version": "0.1.0",
   "author": "Dean Witcraft <dean.witcraft@outlook.com>",
   "dependencies": {
